Fixed the overflow problem with the thrid panel.

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -13,6 +13,7 @@
   border: 2px solid rgb(0, 184, 199);
   width: 500px;
   height: 290px;
+  overflow: hidden;
 }
 
 
